add font to assets

--- a/src/app/app.grocery.html
+++ b/src/app/app.grocery.html
@@ -13,7 +13,11 @@
           </div>
       </div>
   </div>
-  <span>
-    {{tasks | json}}
-</span>
+
+  <ul class="list-group">
+    <li *ngFor="let task of tasks" class="list-group-item">
+        <span> {{ task.name }} </span>
+    </li>
+ </ul>
+ 
 </div>
